--- a/style.css
+++ b/style.css
@@ -192,9 +192,9 @@ body {
     position: absolute;
     top: 0px;
     left: 0px;
-    width: 90%;
+    width: 95%;
     height: 94.5vh;
-    border: 1px solid white;
+    border: 2px solid white;
     margin: 20px;
     overflow-y: scroll;
     display: flex;
@@ -250,6 +250,17 @@ body {
     align-self: center;
     align-items: center;
 }
+	
+#order-button {
+	font-family: "EuroStar-Regular-Extended";
+	height: 50%;
+	width: 100%;
+	border-radius: 4px;
+	background-color: transparent;
+	color: white;
+	border: 2px solid white;
+	font-size: 26px;
+}	
 
 #images-section {
     width: 100%;
