--- a/style.css
+++ b/style.css
@@ -60,10 +60,10 @@ body {
 #menu-img {
 	width: 100%;
 	height: 100%;
- 	background-image: url('./assets/images/eats-imgs/Playground-Eats Menu-1.jpg');
+ 	background-image: url('./assets/images/eats-imgs/Playground-Eats Menu-2.jpg');
   	background-position: top;
 	background-repeat: no-repeat;
-	background-size: contain;
+	background-size: cover;
 }
 
 #second-half {
@@ -74,28 +74,31 @@ body {
     justify-content: center;
     align-content: center;
     align-self: center;
-    align-items: center; 	
+/*    align-items: center; 
+    background-color: red;	*/
 }
 
 #button-container {
-	height: 20%;
+	height: 15%;
 	width: 40%;
     display: flex;
     justify-content: center;
     align-content: center;
     align-self: center;
-    align-items: center; 	
+    align-items: center; 
+/*    background-color: yellow; */ 	
 }
 
 #order-button {
 	font-family: "EuroStar-Regular-Extended";
-	height: 50%;
+	height: 10vh;
 	width: 100%;
 	border-radius: 4px;
 	background-color: transparent;
 	color: white;
 	border: 1px solid white;
-	font-size: 24px;
+	font-size: 4vh;
+    flex-grow: 4;
 }
 
 #order-button:hover {
@@ -134,18 +137,20 @@ body {
 
 #images-section {
 	width: 100%;
-    height: 80%;
+    height: 70%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-end;
     align-content: center;
     align-self: center;
-    align-items: center;    
+    align-items: center; 
+    margin-bottom: 20px;
+/*    background-color: blue; */  
 }
 
 #eats-revolving-imgs-container {
-    width: 90%;
-    height: 80%;
+    width: 60%;
+    height: 90%;
     color: white;  
     display: block;
     background-image: url();
@@ -182,15 +187,10 @@ body {
 
 @keyframes slide-it {
   0%    { transform: translateX(0); }
-  10%   { transform: translateX( calc(-100% - 0px) ); }  
-  20%   { transform: translateX( calc(-200% - 0px) ); } 
-  30%   { transform: translateX( calc(-300% - 0px) ); } 
-  40%   { transform: translateX( calc(-400% - 0px) ); } 
-  50%   { transform: translateX( calc(-500% - 0px) ); }
-  60%   { transform: translateX( calc(-600% - 0px) ); }  
-  70%   { transform: translateX( calc(-700% - 0px) ); } 
-  80%   { transform: translateX( calc(-800% - 0px) ); } 
-  90%   { transform: translateX( calc(-900% - 0px) ); }   
+  25%   { transform: translateX( calc(-100% - 0px) ); }  
+  50%   { transform: translateX( calc(-200% - 0px) ); } 
+  75%   { transform: translateX( calc(-300% - 0px) ); } 
+  100%   { transform: translateX( calc(-400% - 0px) ); }   
 }
 
 /* Smartphones (portrait and landscape) ----------- */
@@ -249,7 +249,7 @@ body {
 #menu-img {
 	width: 100%;
 	height: 100%;
- 	background-image: url('./assets/images/eats-imgs/Playground-Eats Menu-1.jpg');
+ 	background-image: url('./assets/images/eats-imgs/Playground-Eats Menu-2.jpg');
   	background-position: top;
 	background-repeat: no-repeat;
 	background-size: contain;
@@ -266,14 +266,25 @@ body {
     align-items: center; 	
 }
 
+#eats-scrolling-navigation-container {
+    height: 10%;
+    width: 100%;
+    border-bottom: 20px;
+    margin-top: 20px;
+    /* border-top: 20px; */
+    display: flex;
+    justify-content: center;
+}
+
 #button-container {
-    height: 60%;
-    width: 70%;
+    height: 50%;
+    width: 55%;
     display: flex;
     justify-content: center;
     align-content: center;
     align-self: center;
     align-items: center;
+/*    background-color: green;*/
 }
 
 #order-button {
@@ -284,9 +295,9 @@ body {
 	background-color: transparent;
 	color: white;
 	border: 2px solid white;
-	font-size: 55px;
+	font-size: 3vh;
 }
-	
+
 #eats-scrolling-text {
     font-family: "EuroStar-Regular-Extended";
     color: white;
@@ -296,11 +307,12 @@ body {
     align-content: center;
     align-self: center;
     align-items: center;    
-}	
+}
+
 
 #images-section {
     width: 100%;
-    height: 80%;
+    height: 70%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -308,6 +320,7 @@ body {
     align-self: center;
     align-items: center;
     margin-top: -25px;
+/*    background-color: red;*/
 }
 
 
