--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/* font faces */
+* font faces */
 
 @font-face {
     font-family: "EuroStar-Black-Extended";
@@ -218,7 +218,7 @@ body {
     top: 0px;
     left: 0px;
     width: 95%;
-    height: 94.5vh;
+    height: 97.5vh;
     border: 2px solid white;
     margin: 20px;
     overflow-y: scroll;
@@ -295,7 +295,7 @@ body {
 	background-color: transparent;
 	color: white;
 	border: 2px solid white;
-	font-size: 3vh;
+	font-size: 2.5vh;
 }
 
 #eats-scrolling-text {
