--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-* font faces */
+/* font faces */
 
 @font-face {
     font-family: "EuroStar-Black-Extended";
@@ -42,7 +42,8 @@ body {
 	height: 100%;
 	width: 50%;
 /*	background-color: green;*/
-	display: flex;
+/*	display: flex;*/
+    display: none;
     flex-direction: column;
     justify-content: center;
     align-content: center;
@@ -66,7 +67,7 @@ body {
 	background-size: cover;
 }
 
-#second-half {
+/*#second-half {
 	height: 100%;
 	width: 50%;
     display: flex;
@@ -74,14 +75,23 @@ body {
     justify-content: center;
     align-content: center;
     align-self: center;
-/*    align-items: center; 
-    background-color: red;	*/
+}*/
+
+#second-half {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    align-self: center;
 }
 
 #button-container {
+    display: none;
 	height: 15%;
 	width: 40%;
-    display: flex;
+/*    display: flex;*/
     justify-content: center;
     align-content: center;
     align-self: center;
@@ -122,11 +132,11 @@ body {
     color: white;
     font-size: 24px;
     height: 50%;
-    width: 80%;
+    width: 40%;
     border-bottom: 20px;
     align-content: center;
     align-self: center;
-    align-items: center;    
+    align-items: center;
 }
 
 #marquee-text {
@@ -135,7 +145,7 @@ body {
 
 /* Rotating images */
 
-#images-section {
+/*#images-section {
 	width: 100%;
     height: 70%;
     display: flex;
@@ -145,12 +155,25 @@ body {
     align-self: center;
     align-items: center; 
     margin-bottom: 20px;
-/*    background-color: blue; */  
+}*/
+
+#images-section {
+    width: 80%;
+    height: 80%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-content: center;
+    align-self: center;
+    align-items: center;
+    /* margin-bottom: 20px; */
+    /* background-color: blue; */
+    margin-top: 20px;
 }
 
 #eats-revolving-imgs-container {
-    width: 60%;
-    height: 90%;
+    width: 45%;
+    height: 100%;
     color: white;  
     display: block;
     background-image: url();
@@ -227,11 +250,12 @@ body {
 }
 
 #first-half {
+    display: none;
 	margin-top: 30px;
 	height: 100%;
 	width: 100%;
 /*	background-color: green;*/
-	display: flex;
+/*	display: flex;*/
     flex-direction: column;
     justify-content: center;
     align-content: center;
@@ -277,9 +301,10 @@ body {
 }
 
 #button-container {
+    display: none;
     height: 50%;
     width: 65%;
-    display: flex;
+/*    display: flex;*/
     justify-content: center;
     align-content: center;
     align-self: center;
@@ -309,7 +334,6 @@ body {
     align-items: center;    
 }
 
-
 #images-section {
     width: 100%;
     height: 70%;
@@ -321,6 +345,19 @@ body {
     align-items: center;
     margin-top: -25px;
 /*    background-color: red;*/
+}
+
+#eats-revolving-imgs-container {
+    width: 85%;
+    height: 80%;
+    color: white;
+    display: block;
+    background-image: url(style.css);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    overflow: hidden;
+    border: 1px solid white;
 }
 
 
